--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,41 @@
-/* место для вашего кода */
+.header {
+display: grid;
+
+}
+
+.header__links-list {
+display: flex;
+gap: 32px;
+}
+
+.header__links-list-item {
+    color: #000;
+    font-family: Raleway;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.header__links-list-item.nobullit {
+
+}
+.header__link {
+border-bottom: 1px solid;
+}
+.header__link-active {
+
+}
+.header__logo {
+    justify-self: center;
+    width: 148px;
+    height: 105px;
+}
+.header__logo-image {
+
+}
+.address {
+
+}
+.header__address {
+
+}
