--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 .header {
 display: grid;
-grid-template-columns:  1fr min-content 1fr;
+grid-template-columns:  1fr 1fr 1fr;
 align-items: center;
 padding: 92px 49px ;
 }
@@ -25,12 +25,14 @@ gap: 32px;
 .header__logo {
     justify-self: center;
     width: 148px;
-    height: 105px;
-    
+       
 }
 .header__logo-image {
     display: block;
+    width: 148px;
     height: 114px;
+    object-fit: cover;
+    object-position: top;
 }
 .address {
     font-size: 18px;
@@ -43,8 +45,179 @@ gap: 32px;
     justify-self: right;
 }
 .cover {
+    position: relative;
     background-image: url(../images/cover.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    
+    
+}
+.overlay {
+    position: absolute;
+    background: #000;
+    opacity: 0.6;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 0;
+}
+.cover__title {
+    position: relative;
+    font-family: Raleway, sans-serif;
+    color: #fff;
+    font-size: 100px;
+    font-style: normal;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 0.3em;
+    line-height: 115%;
+    padding-top: 165px;
+    margin-left: 50px;
+    
+}
+.aligned-text {
+    display: block;
+    margin-top: 20px;
+    line-height: 1;
+}
+
+.aligned-text_center {
+    text-align: center;
+}
+
+.aligned-text_right {
+    text-align: right;
+}
+
+.letter-spacing-extended {
+    letter-spacing: 0.6em;
+}
+
+.no-letter-spacing {
+    margin-right: 50px;
+    letter-spacing: initial;
+}
+.cover__description {
+    margin-top: 130px;
+    padding-bottom: 50px;
+    margin-left: 422px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.cover__description-text {
+    position: relative;
+    z-index: 2;
+    color: #fff;
+    font-size: 22px;
+    text-transform: uppercase;
+    word-spacing: 18px;
+}
+.bet__button {
+    position: relative;
+    z-index: 2;
+    margin-right: 50px;
+    padding: 11px 32px;
+    border: 1px solid #FFF;
+    background-color: transparent;
+    font-family: Raleway, sans-serif;
+    color: #fff;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-transform: uppercase;
+}
+.lots {
+    margin-top: 130px;
+    padding: 50px;
+}
+
+.lots__heading {
+    margin-left: 40px;
+    font-size: 40px;
+    text-transform: uppercase;
+    margin-bottom: 28px;
+}
+
+.lots__card-list {
+    display: flex;
+    gap: 25px;
+    flex-wrap: wrap;
+    list-style: none;
+}
+
+.lots__card-list-item {
+    flex-grow: 1;
+    width: 430px;
+    min-height: 450px;
+}
+
+.card-link {
+    cursor: pointer;
+}
+
+.card {
+    height: 100%;
+    padding: 50px 40px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+}
+
+.card_type_film {
+    background-image: url("../images/card-lot-01.jpg");
+}
+
+.card_type_book {
+    background-image: url("../images/card-lot-02.jpg");
+}
+
+.card_type_picture {
+    background-image: url("../images/card-lot-03.jpg");
+}
+
+.card__title {
+    color: #FFF;
+    font-family: Raleway, sans-serif;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
+    text-transform: uppercase;
+    position: relative;
+    z-index: 1;
+    text-decoration: underline;
+}
+
+.card__text {
+    position: relative;
+    z-index: 1;
+    font-size: 20px;
+    color: #FFF;
+    font-family: Raleway, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%;
+}
+
+.lots__look-more-link {
+    display: inline-block;
+    font-size: 20px;
+    font-weight: 400;
+    font-style: normal;
+    line-height: normal;
+    text-decoration: none;
+    border-bottom: 1px solid #000;
+    margin-left: 40px;
+    margin-top: 30px;
+    
 }
