--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,7 @@
 .header__links-list-item {
     font-size: 18px;
     font-weight: 400;
+    list-style: circle;
 }
 
 .header__link {
@@ -21,6 +22,7 @@
 }
 .header__link-active {
     border-bottom: none;
+    
 }
 .header__logo {
     justify-self: center;
@@ -220,4 +222,43 @@
     margin-left: 40px;
     margin-top: 30px;
     
+}
+.about {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 10px;
+    margin: 130px 50px;
+}
+.about__logo {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    background-color: #000;
+    width: 240px;
+    height: 240px;
+    border-radius: 50%;
+    
+}
+
+.about__logo-image {
+    width: 60%;
+}
+
+.about__title {
+    color: #000;
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.about__text-container {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+.about__text {
+    font-size: 20px;
+    line-height: normal;
 }
