--- a/styles/style.css
+++ b/styles/style.css
@@ -262,3 +262,41 @@
     font-size: 20px;
     line-height: normal;
 }
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-content: flex-start;
+    margin: 180px 50px 90px 50px;
+}
+.footer__menu {
+    align-content: center;
+}
+.footer__menu-list {
+    list-style: none;
+}
+
+.footer__menu-link {
+    list-style: none;
+    text-decoration: none;
+    border-bottom: 1px solid;
+}
+
+.footer__menu-link_active {
+    border: none;
+}
+
+.footer__social-list {
+    list-style: none;
+    display: flex;
+    gap: 48px;
+}
+
+.footer__social-link {
+    display: block;
+    width: 48px;
+    height:  48px;
+}
+
+.footer__social-icon {
+    object-fit: cover;
+}
