--- a/styles/style.css
+++ b/styles/style.css
@@ -259,8 +259,12 @@
     gap: 25px;
 }
 .about__text {
+    font-family: Raleway, sans-serif;
     font-size: 20px;
+    font-weight: 400;
+    font-style: normal;
     line-height: normal;
+    padding-bottom: 25px;
 }
 .footer {
     display: flex;
