--- a/styles/style.css
+++ b/styles/style.css
@@ -20,10 +20,12 @@
     border-bottom: 1px, solid;
     font-weight: 400;
 }
-.header__link-active {
-    border-bottom: none;
-    
+.header__links-item-active {
+    border-bottom: none;  
+    list-style-type: none;  
 }
+
+
 .header__logo {
     justify-self: center;
     width: 148px;
@@ -272,12 +274,13 @@
     align-content: center;
 }
 .footer__menu-list {
+    text-align: center;
+    font-family: Raleway, sans-serif;
+    font-size: 18px;
     list-style: none;
 }
 
 .footer__menu-link {
-    list-style: none;
-    text-decoration: none;
     border-bottom: 1px solid;
 }
 
