--- a/styles/style.css
+++ b/styles/style.css
@@ -1,304 +1,297 @@
 .header {
-    display: grid;
-    grid-template-columns:  1fr 1fr 1fr;
-    align-items: center;
-    padding: 92px 49px ;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  padding: 92px 49px;
 }
 
 .header__links-list {
-    display: flex;
-    gap: 32px;
+  display: flex;
+  gap: 32px;
 }
 
 .header__links-list-item {
-    font-size: 18px;
-    font-weight: 400;
-    list-style: circle;
+  font-size: 18px;
+  font-weight: 400;
+  list-style: circle;
 }
 
 .header__link {
-    border-bottom: 1px, solid;
-    font-weight: 400;
+  border-bottom: 1px, solid;
+  font-weight: 400;
 }
 .header__links-item-active {
-    border-bottom: none;  
-    list-style-type: none;
+  border-bottom: none;
+  list-style-type: none;
 }
 
 .header__logo {
-    justify-self: center;
-    width: 148px;
-       
+  justify-self: center;
+  width: 148px;
 }
 .header__logo-image {
-    display: block;
-    width: 148px;
-    height: 114px;
-    object-fit: cover;
-    object-position: top;
+  display: block;
+  width: 148px;
+  height: 114px;
+  object-fit: cover;
+  object-position: top;
 }
 .address {
-    font-size: 18px;
-    max-width: 240px;
-    font-style: normal;
-    line-height: 24.3px;
+  font-size: 18px;
+  max-width: 240px;
+  font-style: normal;
+  line-height: 24.3px;
 }
 
 .header__address {
-    justify-self: right;
+  justify-self: right;
 }
 .cover {
-    position: relative;
-    background-image: url(../images/cover.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    
-    
+  position: relative;
+  background-image: url(../images/cover.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .overlay {
-    position: absolute;
-    background: #000;
-    opacity: 0.6;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 0;
+  position: absolute;
+  background: #000;
+  opacity: 0.6;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
 }
 .cover__title {
-    position: relative;
-    font-family: Raleway, sans-serif;
-    color: #fff;
-    font-size: 100px;
-    font-style: normal;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 0.3em;
-    line-height: 115%;
-    padding-top: 165px;
-    margin-left: 50px;
-    
+  position: relative;
+  font-family: Raleway, sans-serif;
+  color: #fff;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.3em;
+  line-height: 115%;
+  padding-top: 165px;
+  margin-left: 50px;
 }
 .aligned-text {
-    display: block;
-    margin-top: 20px;
-    line-height: 1;
+  display: block;
+  margin-top: 20px;
+  line-height: 1;
 }
 
 .aligned-text_center {
-    text-align: center;
+  text-align: center;
 }
 
 .aligned-text_right {
-    text-align: right;
+  text-align: right;
 }
 
 .letter-spacing-extended {
-    letter-spacing: 0.6em;
+  letter-spacing: 0.6em;
 }
 
 .no-letter-spacing {
-    margin-right: 50px;
-    letter-spacing: initial;
+  margin-right: 50px;
+  letter-spacing: initial;
 }
 .cover__description {
-    margin-top: 130px;
-    padding-bottom: 50px;
-    margin-left: 422px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+  margin-top: 130px;
+  padding-bottom: 50px;
+  margin-left: 422px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 .cover__description-text {
-    position: relative;
-    z-index: 2;
-    color: #fff;
-    font-size: 22px;
-    text-transform: uppercase;
-    word-spacing: 18px;
+  position: relative;
+  z-index: 2;
+  color: #fff;
+  font-size: 22px;
+  text-transform: uppercase;
+  word-spacing: 18px;
 }
 .bet__button {
-    position: relative;
-    z-index: 2;
-    margin-right: 50px;
-    padding: 11px 32px;
-    border: 1px solid #FFF;
-    background-color: transparent;
-    font-family: Raleway, sans-serif;
-    color: #fff;
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-transform: uppercase;
+  position: relative;
+  z-index: 2;
+  margin-right: 50px;
+  padding: 11px 32px;
+  border: 1px solid #fff;
+  background-color: transparent;
+  font-family: Raleway, sans-serif;
+  color: #fff;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
 }
 .lots {
-    margin-top: 130px;
-    padding: 50px;
+  margin-top: 130px;
+  padding: 50px;
 }
 
 .lots__heading {
-    margin-left: 40px;
-    font-size: 40px;
-    text-transform: uppercase;
-    margin-bottom: 28px;
+  margin-left: 40px;
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-bottom: 28px;
 }
 
 .lots__card-list {
-    display: flex;
-    gap: 25px;
-    flex-wrap: wrap;
-    list-style: none;
+  display: flex;
+  gap: 25px;
+  flex-wrap: wrap;
+  list-style: none;
 }
 
 .lots__card-list-item {
-    flex-grow: 1;
-    width: 430px;
-    min-height: 450px;
+  flex-grow: 1;
+  width: 430px;
+  min-height: 450px;
 }
 
 .card {
-    height: 100%;
-    padding: 50px 40px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-
+  height: 100%;
+  padding: 50px 40px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .card_type_film {
-    background-image: url("../images/card-lot-01.jpg");
+  background-image: url("../images/card-lot-01.jpg");
 }
 
 .card_type_book {
-    background-image: url("../images/card-lot-02.jpg");
+  background-image: url("../images/card-lot-02.jpg");
 }
 
 .card_type_picture {
-    background-image: url("../images/card-lot-03.jpg");
+  background-image: url("../images/card-lot-03.jpg");
 }
 
 .card__title {
-    color: #FFF;
-    font-family: Raleway, sans-serif;
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 120%;
-    text-transform: uppercase;
-    position: relative;
-    z-index: 1;
-    text-decoration: underline;
+  color: #fff;
+  font-family: Raleway, sans-serif;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+  text-transform: uppercase;
+  position: relative;
+  z-index: 1;
+  text-decoration: underline;
 }
 
 .card__text {
-    position: relative;
-    z-index: 1;
-    font-size: 20px;
-    color: #FFF;
-    font-family: Raleway, sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%;
+  position: relative;
+  z-index: 1;
+  font-size: 20px;
+  color: #fff;
+  font-family: Raleway, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
 }
 
 .lots__look-more-link {
-    display: inline-block;
-    font-size: 20px;
-    font-weight: 400;
-    font-style: normal;
-    line-height: normal;
-    text-decoration: none;
-    border-bottom: 1px solid #000;
-    margin-left: 40px;
-    margin-top: 30px;
-    
+  display: inline-block;
+  font-size: 20px;
+  font-weight: 400;
+  font-style: normal;
+  line-height: normal;
+  text-decoration: none;
+  border-bottom: 1px solid #000;
+  margin-left: 40px;
+  margin-top: 30px;
 }
 .about {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    column-gap: 10px;
-    margin: 130px 50px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  column-gap: 10px;
+  margin: 130px 50px;
 }
 .about__logo {
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-    background-color: #000;
-    width: 240px;
-    height: 240px;
-    border-radius: 50%;
-    
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  background-color: #000;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
 }
 
 .about__logo-image {
-    width: 60%;
+  width: 60%;
 }
 
 .about__title {
-    color: #000;
-    font-size: 40px;
-    font-weight: 700;
-    text-transform: uppercase;
-    margin-top: 100px;
-    margin-bottom: 100px;
+  color: #000;
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 .about__text-container {
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
 }
 .about__text {
-    font-family: Raleway, sans-serif;
-    font-size: 20px;
-    font-weight: 400;
-    font-style: normal;
-    line-height: normal;
-    padding-bottom: 25px;
+  font-family: Raleway, sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  font-style: normal;
+  line-height: normal;
+  padding-bottom: 25px;
 }
 .footer {
-    display: flex;
-    justify-content: space-between;
-    align-content: flex-start;
-    margin: 180px 50px 90px 50px;
+  display: flex;
+  justify-content: space-between;
+  align-content: flex-start;
+  margin: 180px 50px 90px 50px;
 }
 .footer__menu {
-    align-content: center;
+  align-content: center;
 }
 .footer__menu-list {
-    text-align: center;
-    font-family: Raleway, sans-serif;
-    font-size: 18px;
-    list-style: none;
+  text-align: center;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  list-style: none;
 }
 
 .footer__menu-link {
-    border-bottom: 1px solid;
+  border-bottom: 1px solid;
 }
 
 .footer__menu-link_active {
-    border: none;
+  border: none;
 }
 
 .footer__social-list {
-    list-style: none;
-    display: flex;
-    gap: 48px;
+  list-style: none;
+  display: flex;
+  gap: 48px;
 }
 
 .footer__social-link {
-    display: block;
-    width: 48px;
-    height:  48px;
+  display: block;
+  width: 48px;
+  height: 48px;
 }
 
 .footer__social-icon {
-    object-fit: cover;
+  object-fit: cover;
 }
