--- a/styles/style.css
+++ b/styles/style.css
@@ -17,11 +17,12 @@
 }
 
 .header__link {
-  border-bottom: 1px, solid;
+  text-decoration: underline;
   font-weight: 400;
 }
+
 .header__links-item-active {
-  border-bottom: none;
+  text-decoration: none;
   list-style-type: none;
 }
 
@@ -29,6 +30,7 @@
   justify-self: center;
   width: 148px;
 }
+
 .header__logo-image {
   display: block;
   width: 148px;
@@ -36,6 +38,7 @@
   object-fit: cover;
   object-position: top;
 }
+
 .address {
   font-size: 18px;
   max-width: 240px;
@@ -46,6 +49,7 @@
 .header__address {
   justify-self: right;
 }
+
 .cover {
   position: relative;
   background-image: url(../images/cover.jpg);
@@ -53,6 +57,7 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 .overlay {
   position: absolute;
   background: #000;
@@ -63,6 +68,7 @@
   left: 0;
   z-index: 0;
 }
+
 .cover__title {
   position: relative;
   font-family: Raleway, sans-serif;
@@ -74,12 +80,16 @@
   letter-spacing: 0.3em;
   line-height: 115%;
   padding-top: 165px;
-  margin-left: 50px;
 }
+
 .aligned-text {
   display: block;
   margin-top: 20px;
   line-height: 1;
+}
+.aligned-text_left {
+  display: block;
+  justify-self: start;
 }
 
 .aligned-text_center {
@@ -98,15 +108,16 @@
   margin-right: 50px;
   letter-spacing: initial;
 }
+
 .cover__description {
   margin-top: 130px;
   padding-bottom: 50px;
   margin-left: 422px;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
+
 .cover__description-text {
   position: relative;
   z-index: 2;
@@ -115,7 +126,8 @@
   text-transform: uppercase;
   word-spacing: 18px;
 }
-.bet__button {
+
+.cover__button {
   position: relative;
   z-index: 2;
   margin-right: 50px;
@@ -130,6 +142,7 @@
   line-height: normal;
   text-transform: uppercase;
 }
+
 .lots {
   margin-top: 130px;
   padding: 50px;
@@ -192,6 +205,10 @@
   text-decoration: underline;
 }
 
+.card-link {
+  text-decoration: none;
+}
+
 .card__text {
   position: relative;
   z-index: 1;
@@ -214,12 +231,14 @@
   margin-left: 40px;
   margin-top: 30px;
 }
+
 .about {
   display: grid;
   grid-template-columns: 1fr 2fr;
   column-gap: 10px;
   margin: 130px 50px;
 }
+
 .about__logo {
   display: flex;
   justify-content: center;
@@ -248,6 +267,7 @@
   flex-direction: column;
   gap: 25px;
 }
+
 .about__text {
   font-family: Raleway, sans-serif;
   font-size: 20px;
@@ -256,12 +276,14 @@
   line-height: normal;
   padding-bottom: 25px;
 }
+
 .footer {
   display: flex;
   justify-content: space-between;
   align-content: flex-start;
-  margin: 180px 50px 90px 50px;
+  margin: 185px 50px 90px 50px;
 }
+
 .footer__menu {
   align-content: center;
 }
@@ -270,14 +292,11 @@
   font-family: Raleway, sans-serif;
   font-size: 18px;
   list-style: none;
-}
-
-.footer__menu-link {
-  border-bottom: 1px solid;
+  
 }
 
 .footer__menu-link_active {
-  border: none;
+  text-decoration: none;
 }
 
 .footer__social-list {
