--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
-  padding: 92px 49px;
+  padding: 92px 49px 92px 51px;
 }
 
 .header__links-list {
@@ -14,6 +14,10 @@
   font-size: 18px;
   font-weight: 400;
   list-style: circle;
+}
+
+.header__link-active {
+  text-decoration: none;
 }
 
 .header__link {
@@ -32,11 +36,8 @@
 }
 
 .header__logo-image {
-  display: block;
   width: 148px;
-  height: 114px;
-  object-fit: cover;
-  object-position: top;
+  height: 105px;
 }
 
 .address {
@@ -79,7 +80,7 @@
   text-transform: uppercase;
   letter-spacing: 0.3em;
   line-height: 115%;
-  padding-top: 165px;
+  padding: 165px 0px 0px 50px;
 }
 
 .aligned-text {
@@ -88,11 +89,11 @@
   line-height: 1;
 }
 .aligned-text_left {
-  display: block;
-  justify-self: start;
+  line-height: 115%;
 }
 
 .aligned-text_center {
+  margin-right: 49px;
   text-align: center;
 }
 
@@ -110,7 +111,7 @@
 }
 
 .cover__description {
-  margin-top: 130px;
+  margin-top: 137px;
   padding-bottom: 50px;
   margin-left: 422px;
   display: flex;
@@ -144,7 +145,7 @@
 }
 
 .lots {
-  margin-top: 130px;
+  margin-top: 129px;
   padding: 50px;
 }
 
@@ -242,7 +243,8 @@
 .about__logo {
   display: flex;
   justify-content: center;
-  margin: 0 auto;
+  align-items: center;
+  margin: 0 95px;
   background-color: #000;
   width: 240px;
   height: 240px;
@@ -250,7 +252,8 @@
 }
 
 .about__logo-image {
-  width: 60%;
+  width: 148px;
+  height: 114px;
 }
 
 .about__title {
@@ -281,7 +284,7 @@
   display: flex;
   justify-content: space-between;
   align-content: flex-start;
-  margin: 185px 50px 90px 50px;
+  margin: 155px 50px 90px 50px;
 }
 
 .footer__menu {
