--- a/styles/style.css
+++ b/styles/style.css
@@ -271,7 +271,12 @@
   font-weight: 400;
   font-style: normal;
   line-height: normal;
-  margin-top: 25px;
+}
+
+.about__texts {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
 }
 
 .footer {
